<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_add_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageButton
            android:id="@+id/back_button_in_add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/arrow_back"
            android:foregroundGravity="center"
            android:src="@drawable/baseline_back_button_24"
            app:layout_constraintEnd_toStartOf="@+id/add_student_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:id="@+id/add_student_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_student_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="12dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/back_button_in_add"
            app:layout_constraintEnd_toStartOf="@+id/prop_button_in_add"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:foregroundGravity="center"
            android:id="@+id/prop_button_in_add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_properties"
            android:contentDescription="@string/arrow_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_student_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/student_name_title_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/material_dynamic_neutral10"
        app:layout_constraintTop_toBottomOf="@+id/top_bar_add_layout"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <EditText
        android:id="@+id/add_student_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_white_corner_10_border_gray"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="#FF757575"
        android:textSize="14sp"
        android:hint="@string/hint_for_student_name"
        android:autofillHints="@string/hint_for_student_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_name_title_add"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/student_id_title_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/material_dynamic_neutral10"
        app:layout_constraintTop_toBottomOf="@+id/add_student_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/add_student_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_white_corner_10_border_gray"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="#FF757575"
        android:textSize="14sp"
        android:hint="@string/hint_for_student_id"
        android:autofillHints="@string/hint_for_student_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_id_title_add"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_in_add_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/cancel"
        app:cornerRadius="10dp"
        android:textSize="15sp"
        android:padding="12dp"
        android:backgroundTint="@color/primary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_in_add_student"
        app:layout_constraintTop_toBottomOf="@id/add_student_id"
        tools:ignore="VisualLintButtonSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_in_add_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add"
        app:cornerRadius="10dp"
        android:textSize="15sp"
        android:padding="12dp"
        android:backgroundTint="@color/primary_color"
        app:layout_constraintStart_toEndOf="@id/btn_cancel_in_add_student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_student_id"/>

</androidx.constraintlayout.widget.ConstraintLayout>